# feishu-vscode-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md  copilot-session-test.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: agent_mvp_execution_plan.md  ax8850_ai_box_hardware_plan.md  copilot_bridge_porting_plan.md  copilot_modes_autonomous_agent_plan.md  feishu_chat_templates.md  feishu_group_notice.md  feishu_live_regression_checklist.md  feishu_quick_ref.md  harborbeacon_runtime_migration_plan.md  mvp_release_plan.md  publish_to_github.md  work_log.md
docs/id_mockup/: README.md  ax8850_ai_box_id_mockup.scad
scripts/: package-macos-installer.sh  package-windows-installer.ps1  smoke-agent-runtime.ps1  start-extension-dev-host.sh  start-live-listener.ps1  start-live-listener.sh  windows-installer.nsi
src/: agent_backend.rs  agent_runtime.rs  audit.rs  bridge.rs  bridge_context.rs  card.rs  direct_command.rs  executor.rs  feishu.rs  follow_up.rs  intent_executor.rs  lib.rs  main.rs  plan.rs  plan_dispatch.rs  reply.rs  semantic_planner.rs  session.rs  test_support.rs  vscode.rs
tests/: approval_card_flow.rs
vscode-agent-bridge/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-agent-bridge/src/: extension.ts  runtimePlanning.test.ts  runtimePlanning.ts
